platform-gitops/clusters/overlays/demo/public-backstage/public-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage-public-backend
  namespace: ingress-nginx-public
  labels:
    app: ingress-nginx-public
    team: platform-engineering
    costCenter: cc-platform
    dataClassification: internal
spec:
  type: ExternalName
  externalName: backstage.backstage.svc.cluster.local
  ports:
    - name: http
      port: 7007
      targetPort: 7007
