platform-gitops/clusters/overlays/demo/public-backstage/public-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage-public
  namespace: ingress-nginx-public
  labels:
    app: ingress-nginx-public
    team: platform-engineering
    costCenter: cc-platform
    dataClassification: internal
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  ingressClassName: backstage-public
  tls:
    - hosts:
        - ${backstage_public_ingress_host}
      secretName: backstage-public-tls
  rules:
    - host: ${backstage_public_ingress_host}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backstage-public-backend
                port:
                  name: http
